--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,5 +2,8 @@ fastapi==0.116.1
 fastapi-cli==0.0.10
 fastapi-cloud-cli==0.1.5
 uvicorn==0.35.0
-python-multipart==0.0.20
+python-multipart==0.0.20s
+nltk==3.9.1
+google-auth==2.40.3
+google-genai==1.32.0
 
